--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.0",
+    "vue-chartjs": "^3.5.1",
+    "vue-drag-drop": "^1.1.4",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
